# tgoskits

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md  release-plz.toml  rust-toolchain.toml  test_aarch64.ps1
.cargo/: config-app.toml  config-test.toml  config.toml
.copilot/framework/: config.toml
.github/workflows/: ci.yml  starryos-linux-guest-oracle.yml  starryos-probes.yml  test-real.yml  test.yml  uboot.toml
apps/helloworld/: Cargo.toml  qemu-aarch64.toml
components/axbacktrace/: Cargo.toml
components/axconfig-gen/: Cargo.toml  README.md
components/axcpu/: Cargo.toml
components/axdriver_crates/: Cargo.toml
components/axfs-ng-vfs/: Cargo.toml
components/axfs_crates/: Cargo.toml
components/axklib/: Cargo.toml
components/axmm_crates/: Cargo.toml
components/axplat_crates/: Cargo.toml  README.md  publish.sh
components/axpoll/: Cargo.toml
components/axvisor_api/: Cargo.toml
components/crate_interface/: Cargo.toml
components/ctor_bare/: Cargo.toml
components/kspin/: Cargo.toml
components/page_table_multiarch/: Cargo.toml
components/percpu/: Cargo.toml
components/riscv-h/: Cargo.toml
components/starry-signal/: Cargo.toml
components/starry-smoltcp/: Cargo.toml
components/starry-vm/: Cargo.toml
container/: Dockerfile  Dockerfile.axvisor-lvz
crates/bare-test/: CHANGELOG.md  Cargo.toml  link.ld
crates/bare-test-macros/: CHANGELOG.md  Cargo.toml
crates/bare-test/src/: lib.rs
crates/dma-api/: Cargo.toml
crates/dma-api/src/: lib.rs
crates/dma-api/src/osal/: mod.rs
crates/kernutil/: CLAUDE.md  Cargo.toml
crates/mmio-api/: CHANGELOG.md  Cargo.toml
crates/page-table-generic/: CODE_REVIEW_REPORT.md
crates/ranges-ext/: CHANGELOG.md  Cargo.toml
crates/someboot/: CHANGELOG.md  Cargo.toml  build-info.toml  build.rs
crates/somehal/: CLAUDE.md  Cargo.toml  build.rs
crates/somehal/src/: console.rs  irq.rs  lib.rs  timer.rs
crates/somehal/src/acpi/: mod.rs
crates/somehal/src/arch/aarch64/: entry.rs  link.ld  mod.rs  paging.rs  trap.rs
crates/somehal/src/arch/aarch64/el1/: mod.rs
crates/somehal/src/arch/aarch64/el2/: mod.rs
crates/somehal/src/arch/aarch64/paging/: pte.rs
crates/somehal/src/arch/loongarch64/: _macros.rs  addrspace.rs  entry.rs  head.rs  link.ld  mod.rs  paging.rs  pte.rs  relocate.rs  trap.rs
crates/somehal/src/efi_stub/: acpi_handle.rs  memmap.rs  mod.rs  pe.rs
crates/somehal/src/fdt/: earlycon.rs  memory.rs
crates/somehal/src/mem/: mod.rs  ram.rs
crates/sparreal-kernel/: CHANGELOG.md  Cargo.toml  link.ld
crates/sparreal-kernel/src/: lang.rs
crates/sparreal-kernel/src/hal/: al.rs  mod.rs  setup.rs  timer.rs
crates/sparreal-kernel/src/mem/: mod.rs
crates/sparreal-kernel/src/os/: console.rs  cpu.rs  mod.rs
crates/sparreal-kernel/src/os/irq/: guard.rs  mod.rs
crates/sparreal-kernel/src/os/mem/: address.rs  allocator.rs  mod.rs
crates/sparreal-kernel/src/os/sync/: spinlock.rs
crates/sparreal-macros/: CHANGELOG.md  Cargo.toml
docs/: ai-iteration-framework.md  arceos-guide.md  arceos-internals.md  arceos-mutex-handoff-analysis.md  arceos-mutex-handoff-v3-design.md  axvisor-internals.md  components.md  starryos-internals.md  starryos-linux-guest-oracle-pin.md  starryos-probes-ci-example.md  starryos-probes-daily.md  starryos-probes-matrix-failure-playbook.md  starryos-syscall-behavior-evidence.md  starryos-syscall-catalog.yaml  starryos-syscall-commit-strategy.md  starryos-syscall-compat-matrix.yaml  starryos-syscall-probe-rollout.yaml  starryos-syscall-s0-batch-summary.md  starryos-syscall-smp-notes.md  starryos-syscall-testing-method.md  tgoskits-dependency.md
docs/bug-contest/: README.md  challenge-packaging.md  component-coverage-ledger.md  component-ledger.yaml  governance-and-scoring.md  judge-environment.md  judge-manifest.yaml  pilot-batch.yaml  pilot-run.md
docs/crates/: README.md  arceos-affinity.md  arceos-display.md  arceos-exception.md  arceos-fs-shell.md  arceos-irq.md  arceos-net-echoserver.md  arceos-net-httpclient.md  arceos-net-httpserver.md  arceos-net-udpserver.md  arceos-sleep.md  arceos-tls.md  arceos_api.md  arm_pl011.md  arm_pl031.md  ax-alloc.md  ax-api.md  ax-config-macros.md  ax-config.md  ax-display.md  ax-dma.md  ax-driver-virtio.md  ax-driver.md  ax-feat.md  ax-fs-ng.md  ax-fs-ramfs.md  ax-fs.md  ax-hal.md  ax-helloworld-myplat.md  ax-helloworld.md  ax-httpclient.md  ax-httpserver.md  ax-input.md  ax-libc.md  ax-mm.md  ax-net-ng.md  ax-net.md  ax-plat-aarch64-bsta1000b.md  ax-plat-aarch64-peripherals.md  ax-plat-aarch64-phytium-pi.md  (+65 more)
os/StarryOS/: Cargo.toml
os/arceos/: Cargo.toml  Makefile  README.md
os/arceos/modules/axlog/: Cargo.toml
os/arceos/modules/axlog/src/: lib.rs
os/arceos/ulib/axlibc/: Cargo.toml
os/arceos/ulib/axlibc/src/: fd_ops.rs
os/axvisor/: Cargo.toml
platform/axplat-dyn/: Cargo.toml
platform/somehal/: CHANGELOG.md  (+2 more)
platform/sparreal-rt/: CHANGELOG.md  Cargo.toml  link.ld
platform/sparreal-rt/src/: hal_impl.rs  lib.rs
scripts/: ai_framework.py  analyze_arceos_dev_main_diff.py  check_compat_matrix.py  gen_crate_docs.py  materialize_syscall_batch.py  refresh_guest_oracle_expected.sh  render_starry_syscall_inventory.py  run_linux_guest_oracle.sh  run_nginx_smoke.py  starryos-probes-ci.sh  test_aarch64_smp.sh
test-suit/arceos/rust/task/concurrency_stress/: Cargo.toml  build-aarch64-unknown-none-softfloat.toml  build-x86_64-unknown-none.toml  qemu-aarch64.toml  qemu-x86_64.toml
test-suit/arceos/rust/task/concurrency_stress/src/: main.rs
test-suit/simple_bare_test/: .gitignore  Cargo.toml  README.md
test-suit/simple_bare_test/tests/: test1.rs
test-suit/starryos/normal/mremap-basic/c/: CMakeLists.txt
test-suit/starryos/normal/mremap-basic/c/src/: main.c
test-suit/starryos/normal/qemu-smp1/bugfix/bug-arp-hol-drain/c/: CMakeLists.txt
test-suit/starryos/normal/qemu-smp1/bugfix/bug-arp-hol-drain/c/src/: main.c
test-suit/starryos/normal/test-listen-v6only-coexist/c/: CMakeLists.txt
test-suit/starryos/normal/test-listen-v6only-coexist/c/src/: main.c  test_framework.h
xtask/: Cargo.toml
(+518 files in other folders)
