[workspace]
members = ["apps/*", "crates/*", "platform/sparreal-rt"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]

dma-api = {version = "0.5"}
fdt-parser = "0.5"
log = "0.4"

somehal = {path = "crates/somehal", version = "0.5"}
sparreal-kernel = {path = "crates/sparreal-kernel", version = "0.13"}
sparreal-rt = {path = "platform/sparreal-rt", version = "0.13"}
