[workspace]
members = ["apps/*", "crates/*", "platform/*", "test-suit/*"]
resolver = "3"

[workspace.package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "A kernel."
edition = "2024"
keywords = ["os"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drivercraft/sparreal-os"

[workspace.dependencies]

anyhow = {version = "1.0", default-features = false}
byte-unit = {version = "5", default-features = false, features = ["byte"]}
fdt-parser = "0.5"
heapless = {version = "0.9"}
log = "0.4"
ranges-ext = "0.5"
thiserror = {version = "2", default-features = false}
tock-registers = "0.10"
uefi = "0.36"

rdrive = "0.18"

dma-api = {version = "0.6", path = "crates/dma-api"}
kasm-aarch64 = {path = "crates/kasm-aarch64", version = "0.2"}
kernutil = {path = "crates/kernutil", version = "0.1"}
page-table-generic = {path = "crates/page-table-generic", version = "0.7"}
someboot = {path = "crates/someboot", version = "0.1"}
somehal-macros = {path = "crates/somehal-macros", version = "0.1"}
somehal = {path = "platform/somehal", version = "0.5"}
sparreal-kernel = {path = "crates/sparreal-kernel", version = "0.13"}
sparreal-macros = {path = "crates/sparreal-macros", version = "0.10"}
sparreal-rt = {path = "platform/sparreal-rt", version = "0.13"}
bare-test-macros = {path = "crates/bare-test-macros", version = "0.3"}
bare-test = {path = "crates/bare-test", version = "0.8"}