[package]
authors = ["Zhourui <zrufo747@outlook.com>"]
categories = ["development-tools", "development-tools::testing"]
description = "A test framework for bare metal."
keywords = ["test", "case", "testing", "testcase", "unittest"]
license = "MPL-2.0"
name = "bare-test"
edition = "2024"
repository = "https://github.com/ZR233/sparreal-os/tree/main/crates/bare-test"
version = "0.8.0"

[dependencies]
bare-test-macros.workspace = true
log.workspace = true
sparreal-rt.workspace = true
sparreal-macros.workspace = true

