[package]
name = "dma-api"
version = "0.6.0"
authors.workspace = true
categories.workspace = true
description = "Trait for DMA alloc and some collections"
edition.workspace = true
keywords = ["os", "dma"]
license.workspace = true
repository.workspace = true

[features]
alloc = []

[dependencies]
cfg-if = "1.0"
thiserror.workspace = true
spin = "0.10"
log = "0.4"
mbarrier = "0.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu-ext = "0.1"