[package]
name = "ranges-ext"
version = "0.6.1"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
alloc = []
default = ["alloc"]

[dependencies]
heapless = "0.9"
thiserror = {version = "2.0", default-features = false}
