[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Sparreal OS kernel"
edition.workspace = true
keywords = ["os"]
license = "MPL-2.0"
name = "somehal"
repository = "https://github.com/ZR233/sparreal-os"
version = "0.5.0"

[features]
efi = []
mmu = []
uspace = ["mmu"]

[dependencies]

ansi_rgb = "0.2"
arrayvec = {version = "0.7", default-features = false}
buddy_system_allocator = "0.11"
fdt-parser = "0.5"
heapless = "0.9"
log = "0.4"
memory_addr = "0.4"
numeric-enum-macro = "0.2"
rgb = "0.8"
spin = "0.10"

# [target.'cfg(target_arch = "loongarch64")'.dependencies]
# uefi = {version = "0.35.0"}
# uefi-raw = "0.11"


[build-dependencies]
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
