[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Sparreal OS kernel"
edition.workspace = true
keywords = ["os"]
license = "MPL-2.0"
name = "sparreal-kernel"
repository = "https://github.com/ZR233/sparreal-os"
version = "0.12.4"

[dependencies]
ansi_rgb = "0.2"
arrayvec = {version = "0.7", default-features = false}
bitflags = "2.9"
buddy_system_allocator = "0.11"
dma-api = {workspace = true, features = ["alloc"]}
fdt-parser = "0.4"
heapless = "0.9"
lock_api = "0.4"
log = "0.4"
memory_addr = "0.4"
page-table-generic = "0.6"
rgb = "0.8.47"
sparreal-macros = {workspace = true}
spin = "0.10"
trait-ffi = "0.2"
ranges-ext = "0.4"

rdrive = "0.18"

rdif-intc = "0.12.1"
rdif-systick = "0.5.1"
rdif-power = "0.6.1"

[dependencies.anyhow]
default-features = false
version = "1.0"

[dependencies.byte-unit]
default-features = false
features = ["byte"]
version = "5.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.5"

[dependencies.pasts]
default-features = false
version = "0.14"

[dependencies.thiserror]
default-features = false
version = "2"

[features]
mmu = []
