[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Sparreal OS kernel"
edition.workspace = true
keywords = ["os"]
license = "MPL-2.0"
name = "sparreal-rt"
repository = "https://github.com/ZR233/sparreal-os"
version = "0.13.0"

[features]
hv = ["somehal/hv"]
uspace = ["somehal/uspace"]

[dependencies]
somehal = { workspace = true }
sparreal-kernel = { workspace = true }

log = {workspace = true}
 