[package]
name = "ax-log"
version = "0.5.11"
repository = "https://github.com/rcore-os/tgoskits"
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Macros for multi-level formatted logging used by ArceOS"
license.workspace = true

[features]
std = ["dep:chrono"]
default = []
# On x86_64, route all log records exclusively to the QEMU debugcon device
# (I/O port 0xE9) and suppress the UART / serial console output.
# Enable for QEMU builds to keep the terminal clean.
debugcon-only = []

[dependencies]
axpanic.workspace = true
cfg-if.workspace = true
chrono = { workspace = true, default-features = true, optional = true }
ax-crate-interface.workspace = true
ax-kspin.workspace = true
log.workspace = true

# [dev-dependencies]
[target.'cfg(not(target_os="none"))'.dev-dependencies]
ax-log = { workspace = true, features = ["std"] }
