[package]
name = "ax-libc"
version.workspace = true
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "ArceOS user program library for C apps"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/ulib/axlibc"

[lib]
name = "ax_libc"
crate-type = ["staticlib"]

[features]
default = []

# Multicore
smp = ["ax-posix-api/smp"]

# Floating point/SIMD
fp-simd = ["axfeat/fp-simd"]

# Interrupts
irq = ["ax-posix-api/irq", "axfeat/irq"]

# Custom or default platforms
myplat = ["axfeat/myplat"]
defplat = ["axfeat/defplat"]

# Memory
alloc = ["ax-posix-api/alloc"]
tls = ["alloc", "axfeat/tls"]

# Multi-task
multitask = ["ax-posix-api/multitask"]

# File system
fs = ["ax-posix-api/fs", "fd"]

# Networking
net = ["ax-posix-api/net", "fd"]

# Libc features
fd = []
pipe = ["ax-posix-api/pipe"]
select = ["ax-posix-api/select"]
epoll = ["ax-posix-api/epoll"]

[dependencies]
ax-posix-api.workspace = true
axerrno.workspace = true
axfeat.workspace = true
axio.workspace = true

[build-dependencies]
bindgen.workspace = true
