[package]
name = "arceos-concurrency-stress"
version = "0.3.0"
edition.workspace = true
authors = ["OpenAI"]
description = "A stress test for ArceOS SMP wait queues, mutexes, and task migration"

[features]
default = []
axstd-ipi = ["ax-std/ipi"]

[dependencies]
ax-std = { workspace = true, features = ["alloc", "multitask", "irq", "sched-rr"], optional = true }
ax-sync = { workspace = true, features = ["multitask"] }
